--- a/pom.xml
+++ b/pom.xml
@@ -10,12 +10,19 @@
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
 
+
+
 	<name>Explore With Me</name>
 
 	<groupId>ru.practicum</groupId>
 	<artifactId>explore-with-me</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<packaging>pom</packaging>
+
+    <modules>
+        <module>ewm-service</module>
+		<module>stats</module>
+	</modules>
 
 	<properties>
 		<java.version>21</java.version>
