--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,25 +1,5 @@
 services:
 
-  ewm-db:
-    image: postgres:16.1
-    container_name: postgres-ewm-service-db
-    ports:
-      - "8432:5432"
-    environment:
-      - POSTGRES_USER=main
-      - POSTGRES_PASSWORD=main
-      - POSTGRES_DB=ewm-service
-
-  stats-db:
-    image: postgres:16.1
-    container_name: postgres-ewm-stats-db
-    ports:
-      - "7432:5432"
-    environment:
-      - POSTGRES_DB=stats-db
-      - POSTGRES_USER=stats
-      - POSTGRES_PASSWORD=stats
-
   stats-server:
     build: stats/stats-server
     container_name: stats-server
@@ -29,8 +9,18 @@ services:
       - stats-db
     environment:
       - SPRING_DATASOURCE_URL=jdbc:postgresql://stats-db:5432/stats-db
-      - SPRING_DATASOURCE_USERNAME=stats
-      - SPRING_DATASOURCE_PASSWORD=stats
+      - SPRING_DATASOURCE_USERNAME=user92
+      - SPRING_DATASOURCE_PASSWORD=user92
+
+  stats-db:
+    image: postgres:16.1
+    container_name: postgres-ewm-stats-db
+    ports:
+      - "7432:5432"
+    environment:
+      - POSTGRES_DB=stats-db
+      - POSTGRES_USER=user92
+      - POSTGRES_PASSWORD=user92
 
   ewm-service:
     build: ewm-service
@@ -45,5 +35,20 @@ services:
       - SPRING_DATASOURCE_URL=jdbc:postgresql://ewm-db:5432/ewm-db
       - SPRING_DATASOURCE_USERNAME=main
       - SPRING_DATASOURCE_PASSWORD=main
+
+  ewm-db:
+    image: postgres:16.1
+    container_name: postgres-ewm-service-db
+    ports:
+      - "8432:5432"
+    environment:
+      - POSTGRES_USER=main
+      - POSTGRES_PASSWORD=main
+      - POSTGRES_DB=ewm-service
+
+
+
+
+
 
 
