--- a/stats/stats-server/Dockerfile
+++ b/stats/stats-server/Dockerfile
@@ -1,3 +1,4 @@
 FROM amazoncorretto:21
+WORKDIR /stats
 COPY target/*.jar app.jar
-ENTRYPOINT ["java","-jar","/stats-server.jar"]
+ENTRYPOINT ["java","-jar","app.jar"]
