--- a/stats/stats-server/src/main/resources/application.properties
+++ b/stats/stats-server/src/main/resources/application.properties
@@ -1,12 +1,13 @@
-#server.port=9090
-#
-#spring.jpa.hibernate.ddl-auto=none
-#spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQL10Dialect
-#spring.jpa.properties.hibernate.format_sql=true
-#spring.jpa.properties.hibernate.show_sql=true
-#spring.sql.init.mode=always
-#
-#spring.datasource.driverClassName=org.postgresql.Driver
-#spring.datasource.url=jdbc:postgresql://localhost:5432/stats-db
-#spring.datasource.username=stats
-#spring.datasource.password=stats
+server.port=9090
+
+spring.jpa.hibernate.ddl-auto=none
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.properties.hibernate.show_sql=true
+spring.jpa.properties.hibernate.boot.allow_jdbc_metadata_access = true
+spring.sql.init.mode=always
+
+spring.datasource.driverClassName=org.postgresql.Driver
+spring.datasource.url=jdbc:postgresql://localhost:7432/stats-db
+spring.datasource.username=user92
+spring.datasource.password=user92
