--- a/ewm-service/src/main/resources/application.properties
+++ b/ewm-service/src/main/resources/application.properties
@@ -2,7 +2,7 @@ server.port=8080
 stats-service.url=http://localhost:9090
 
 spring.datasource.driverClassName=org.postgresql.Driver
-spring.datasource.url=jdbc:postgresql://localhost:8432/main
+spring.datasource.url=jdbc:postgresql://localhost:8432/ewm-service
 spring.datasource.username=main
 spring.datasource.password=main
 
