--- a/ewm-service/src/main/resources/application-test.properties
+++ b/ewm-service/src/main/resources/application-test.properties
@@ -1,5 +1,5 @@
-server.port=8080
-stats-service.url=http://localhost:9090
+#server.port=8080
+#stats-service.url=http://localhost:9090
 
 spring.config.activate.on-profile=test
 spring.datasource.driverClassName=org.h2.Driver
