--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -39,13 +39,14 @@ services:
 
   ewm-db:
     image: postgres:16.1
-    container_name: postgres-ewm-service-db
+    container_name: ewm-db
     ports:
       - "8432:5432"
     environment:
+      - POSTGRES_DB=ewm-db
       - POSTGRES_USER=main
       - POSTGRES_PASSWORD=main
-      - POSTGRES_DB=ewm-service
+
 
 
 
