--- a/ewm-service/src/main/resources/application.properties
+++ b/ewm-service/src/main/resources/application.properties
@@ -6,7 +6,7 @@ spring.jpa.properties.hibernate.format_sql=true
 spring.sql.init.mode=always
 
 spring.datasource.driverClassName=org.postgresql.Driver
-spring.datasource.url=jdbc:postgresql://localhost:8432/ewm-service
+spring.datasource.url=jdbc:postgresql://localhost:8432/ewm-db
 spring.datasource.username=main
 spring.datasource.password=main
 
